--- a/module2-solution/css/index.css
+++ b/module2-solution/css/index.css
@@ -1,11 +1,14 @@
 * {
   box-sizing: border-box;
   margin: 0;
-  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {
+  margin-top: 15px;
   margin-bottom: 15px;
+  text-align: center;
+  font-size: 1.75em;
 }
 
 /* Simple Responsive Framework. */
@@ -17,7 +20,8 @@ h1 {
 @media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
-    border: 1px solid black;
+    padding: 20px;
+    position: relative;
   }
   .col-lg-1 {
     width: 8.33%;
@@ -61,7 +65,8 @@ h1 {
 @media (min-width: 768px) and (max-width: 991px) {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
-    border: 1px solid black;
+    padding: 20px;
+    position: relative;
   }
   .col-md-1 {
     width: 8.33%;
@@ -105,7 +110,8 @@ h1 {
 @media (max-width: 767px) {
   .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
     float: left;
-    border: 1px solid black;
+    padding: 20px;
+    position: relative;
   }
   .col-sm-1 {
     width: 8.33%;
@@ -145,8 +151,34 @@ h1 {
   }
 }
 
-#p1 {
-  background-color: gray;
-  width: 300px;
-  height: 300px;
+.content{
+  padding-left: 20px;
+  border: 1px solid black;
+  background-color: gainsboro;
+}
+.section-title1{
+  border: 1px solid black;
+  background-color: cornsilk;
+  text-align: center;
+  margin-left: auto;
+  width: 30%;
+  font-size: 1.25em;
+}
+
+.section-title2{
+  border: 1px solid black;
+  background-color: pink;
+  text-align: center;
+  margin-left: auto;
+  width: 30%;
+  font-size: 1.25em;
+}
+
+.section-title3{
+  border: 1px solid black;
+  background-color: lightcyan;
+  text-align: center;
+  margin-left: auto;
+  width: 30%;
+  font-size: 1.25em;
 }
